--- a/templates/museum_map.html
+++ b/templates/museum_map.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интерактивная карта и 3D-тур | Музей</title>
 
+    <meta name="description" content="Официальный сайт ГУО «Гимназия №6 г. Минска». Узнайте о нашем музее!">
+
     <!-- Критически важный шрифт для заголовков -->
     <link rel="preload" href="{{ url_for('static', filename='fonts/Montserrat-Black.woff2') }}" as="font" type="font/woff2" crossorigin fetchpriority="high">
     <!-- Критически важный шрифт для основного текста -->
