--- a/templates/index.html
+++ b/templates/index.html
@@ -118,10 +118,10 @@
                 </p>
                 <div class="gallery">
                     <!-- ЗАМЕНИТЕ width/height на реальные размеры изображений -->
-                    <img src="static/museum1.avif" alt="Экспонат музея 1" width="300" height="250" loading="lazy">
-                    <img src="static/museum2.avif" alt="Экспонат музея 2" width="300" height="250" loading="lazy">
-                    <img src="static/museum3.avif" alt="Экспонат музея 3" width="300" height="250" loading="lazy">
-                    <img src="static/museum4.avif" alt="Экспонат музея 4" width="300" height="250" loading="lazy">
+                    <img src="static/museum1.avif" alt="Экспонат музея 1" width="300" height="250">
+                    <img src="static/museum2.avif" alt="Экспонат музея 2" width="300" height="250">
+                    <img src="static/museum3.avif" alt="Экспонат музея 3" width="300" height="250">
+                    <img src="static/museum4.avif" alt="Экспонат музея 4" width="300" height="250">
                 </div>
                 <p>
                     В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он служит важным центром <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
