--- a/templates/index.html
+++ b/templates/index.html
@@ -117,11 +117,10 @@
                     Музей был открыт в гимназии №6 с целью сохранения памяти о героическом прошлом белорусского народа и воспитания патриотизма.
                 </p>
                 <div class="gallery">
-                    <!-- ЗАМЕНИТЕ width/height на реальные размеры изображений -->
-                    <img src="static/museum1.avif" alt="Экспонат музея 1" width="300" height="250">
-                    <img src="static/museum2.avif" alt="Экспонат музея 2" width="300" height="250">
-                    <img src="static/museum3.avif" alt="Экспонат музея 3" width="300" height="250">
-                    <img src="static/museum4.avif" alt="Экспонат музея 4" width="300" height="250">
+                    <img src="static/museum1.avif" alt="Экспонат музея 1" width="300" height="250" loading="lazy">
+                    <img src="static/museum2.avif" alt="Экспонат музея 2" width="300" height="250" loading="lazy">
+                    <img src="static/museum3.avif" alt="Экспонат музея 3" width="300" height="250" loading="lazy">
+                    <img src="static/museum4.avif" alt="Экспонат музея 4" width="300" height="250" loading="lazy">
                 </div>
                 <p>
                     В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он служит важным центром <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
@@ -147,7 +146,6 @@
             </div>
 
                 <div class="gallery"> 
-                    <!-- ЗАМЕНИТЕ width/height на реальные размеры изображений -->
                     <img src="{{ url_for('static', filename='granit1.avif') }}" alt="Фотография отряда «Гранит» 1" width="300" height="250" loading="lazy">
                     <img src="{{ url_for('static', filename='granit2.avif') }}" alt="Фотография отряда «Гранит» 2" width="300" height="250" loading="lazy">
                     <img src="{{ url_for('static', filename='granit3.avif') }}" alt="Фотография отряда «Гранит» 3" width="300" height="250" loading="lazy">
